fix homepage overflow scroll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -640,7 +640,7 @@ audio {
     background-color: #33495F;
     position: absolute;
     font-size: 35px;
-    top: 15%;
+    top: 20%;
     font-weight: normal;
     padding: 30px;
     margin-left: 30px;
